fix: Add flex-wrap for smaller screens

--- a/src/pages/dashboard/idoCard.css
+++ b/src/pages/dashboard/idoCard.css
@@ -183,6 +183,12 @@
     gap: 20px;
 }
 
+@media (max-width: 990px) {
+    .crowdsale-container {
+        flex-wrap: wrap;
+    }
+}
+
 .interaction-box {
     margin: 20px 0;
     width: 100%;
